--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "blacktiger-ng",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.0-alpha3",
+  "license": "MIT",
+  "angular-cli": {},
   "scripts": {
-    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
-    "lite": "lite-server",
+    "start": "ng server",
     "postinstall": "typings install",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings"
+    "lint": "tslint \"src/**/*.ts\"",
+    "test": "ng test",
+    "pree2e": "webdriver-manager update",
+    "e2e": "protractor"
   },
-  "license": "ISC",
+  "private": true,
   "dependencies": {
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
@@ -18,20 +20,25 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.1",
-    "@angular/upgrade": "2.0.0-rc.1",
-    "angular2-in-memory-web-api": "0.0.9",
     "angular2-localstorage": "^0.3.0",
-    "bootstrap": "^3.3.6",
-    "core-js": "^2.4.0",
-    "reflect-metadata": "^0.1.3",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
+    "systemjs": "0.19.26",
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
+    "angular-cli": "^1.0.0-beta.4",
+    "codelyzer": "0.0.14",
+    "ember-cli-inject-live-reload": "^1.4.0",
+    "jasmine-core": "^2.4.1",
+    "jasmine-spec-reporter": "^2.4.0",
+    "karma": "^0.13.15",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-jasmine": "^0.3.8",
+    "protractor": "^3.3.0",
+    "ts-node": "^0.5.5",
+    "tslint": "^3.6.0",
     "typescript": "^1.8.10",
     "typings": "^0.8.1"
   }
